# OpScanner

./: README.md
analysis/: CMakeLists.txt  filter.py  scan.py
analysis/lib/: CMakeLists.txt  CollectAPIPass.cpp  FunctionInfo.cpp  FunctionInfo.h  ScanAPIPass.cpp
analysis/result/: scan_pytorch.txt
testing/: test_tf_backward.py  test_tf_forward.py  test_torch_backward.py  test_torch_forward.py
testing/data/: elu_backward_diffdata_tf.csv  elu_backward_diffdata_torch.csv  elu_backward_res_tf.csv  elu_backward_res_torch.csv  elu_diffdata_tf.csv  elu_diffdata_torch.csv  elu_res_tf.csv  elu_res_torch.csv  floordiv_diffdata_tf.csv  floordiv_diffdata_torch.csv  floordiv_res_tf.csv  floordiv_res_torch.csv  logcumsumexp_diffdata_tf.csv  logcumsumexp_diffdata_torch.csv  logcumsumexp_res_tf.csv  logcumsumexp_res_torch.csv  selu_backward_diffdata_tf.csv  selu_backward_diffdata_torch.csv  selu_backward_res_tf.csv  selu_backward_res_torch.csv  selu_diffdata_tf.csv  selu_diffdata_torch.csv  selu_res_tf.csv  selu_res_torch.csv  softplus_backward_diffdata_tf.csv  softplus_backward_diffdata_torch.csv  softplus_backward_res_tf.csv  softplus_backward_res_torch.csv  softplus_diffdata_tf.csv  softplus_diffdata_torch.csv  softplus_res_tf.csv  softplus_res_torch.csv
training/: CIFAR10-Compare-Conv-TF.py  CIFAR10-Compare-Conv-Torch.py
